[JSC] Use consistent error message for RegExpExec when this value is not a RegExp object https://bugs.webkit.org/show_bug.cgi?id=258559

Reviewed by Yusuke Suzuki.

When this value is not a RegExp object, regExpProtoFuncExec(runtime/RegExpPrototype.cpp) and
operationRegExpExecGeneric(dfg/DFGOperations.cpp) throw Type Error. They should use consistent
error messages but are different.

This patch fixes to use consistent error messages between them.

* JSTests/stress/regexp-exec-consistent-error-message.js: Added.
(shouldBe):
(test):
* Source/JavaScriptCore/dfg/DFGOperations.cpp:
(JSC::DFG::JSC_DEFINE_JIT_OPERATION):

Canonical link: https://commits.webkit.org/278663@main